--- a/indexcss.css
+++ b/indexcss.css
@@ -1,5 +1,5 @@
 body {
-      background: url("ImagesRequired/doodleBackground_image.jpg");
+      background: url("ImagesRequired/background_image3d.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       /* background-position: fixed; */
@@ -8,9 +8,10 @@ body {
 }
 
 .heading-div{
+      position: static;
       display: flex;
-      background-color: rgb(167, 167, 167);
-      justify-content: space-evenly;
+      background-color: rgb(27, 27, 27);
+      justify-content: space-around;
       align-items: center;
       padding: 0.5%;
       /* gap: 10%; */
@@ -26,12 +27,12 @@ body {
 
 
 .chatmates-logo{
-      width: 31%;
+      width: 25%;
       align-items: center;
 }
 .chatmates-brand-name{
-      font-size: 4rem;
-      color: rgb(14, 10, 69);
+      font-size: 2.8rem;
+      color: rgb(221, 219, 255);
       text-decoration: none;
 }
 .chatmates-brand-name:hover{
@@ -48,6 +49,7 @@ body {
 
 .information-icon{
       width: 5%;
+      border-radius: 100%;
 }
 .video-icon{
       width: 7%;
@@ -66,9 +68,9 @@ body {
       max-width: 90%;
       /* background-color: rgb(190, 190, 190); */
       color: white;
-     
+      margin-top: 2%;
       padding: 33px;
-      height: 70vh;
+      height: 60vh;
       /* so that we we wpuld be able to scroll in y direction of the chat */
       overflow-y: auto;
       margin-bottom: 23px;
@@ -94,10 +96,14 @@ body {
       background: #6b6b6b; 
     }
 .message {
-      background-color: rgb(158, 158, 158);
-      border: ridge rgb(123, 123, 123);
+      color: rgb(255, 255, 255);
+      font-family: 'Playpen Sans', cursive;
+      background-color: rgb(26, 26, 26);
+      border: solid rgb(7, 6, 6);
       border-radius: 6px;
-      margin-top: 3%;
+      border-width: 0.5%;
+      margin-top: 1%;
+      font-size: 1rem;
       padding: 1%;
       width: fit-content;
 }
@@ -105,14 +111,14 @@ body {
 .left {
       float: left;
       clear: both;
-      margin-right: 20%;
+      margin-right: 10%;
 }
 
 .right {
       float: right;
       /* not allowing left and right */
       clear: both;
-      margin-left: 20%;
+      margin-left: 10%;
 }
 
 .middle {
@@ -122,35 +128,43 @@ body {
 
 
 #messageInp {
-      width: 85%;
+      color: rgb(45, 45, 45);
+      font-size: 1.3rem;
       align-items: flex-start;
-      border: beige;
-      height: 40px;
-      padding: 15px;
+      border: rgb(255, 255, 255);
+      height: 35px;
+      width: 100%;
+      padding: 10px;
       border-radius: 50px;
-      background-color: rgb(61, 61, 61);
+      background-color: rgb(156, 156, 156);
 }
 
 #send-box {
       /* display: flex; */
       margin-top: 2%;
-      background-color: rgb(167, 167, 167);
-      margin-left: 3%;
-      margin-right: 3%;
+      background-color: rgb(26, 26, 26);
+      
 
 }
 
 #send-container {
-      display: block;
+      display: flex;
       margin: auto;
-      text-align: left;
+      text-align: center;
       max-width: 900px;
       /* height: 100%; */
-      padding: 2%;
+      padding: 4%;
 }
 
 /* message box to send */
 .send-message-button {
       /* position: fixed; */
-      width: 2.6rem;
+      width: 2.2rem;
+}
+
+.footer-thing{
+      position: absolute;
+      bottom: 0%;
+      background-color: rgb(26, 26, 26);
+       height: 100px;
 }
